--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
+    "@ionic-native/camera": "^4.6.0",
     "@ionic-native/core": "4.3.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
+    "angularfire2": "^5.0.0-rc.6",
+    "firebase": "^4.11.0",
+    "image-capture": "^0.4.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
@@ -31,7 +35,7 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.0",
+    "@ionic/app-scripts": "^3.1.6",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project"
