--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
+    "uuid": "^3.3.2",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
